@@ -1,7 +1,7 @@
-# $NetBSD: Makefile,v 1.15 2003/09/13 11:54:23 jdolecek Exp $
+# $NetBSD: Makefile,v 1.16 2004/12/07 21:14:38 jdolecek Exp $
 
-DISTNAME=	vmware-netbsd-3.2.1.6
-PKGNAME=	vmware-module-3.2.1.6
+DISTNAME=	vmware-netbsd-3.2.1.7
+PKGNAME=	vmware-module-3.2.1.7
 CATEGORIES=	emulators
 MASTER_SITES=   ftp://ftp.NetBSD.org/pub/NetBSD/misc/vmware/
 EXTRACT_SUFX=	.tar.bz2
